[gd_scene load_steps=3 format=3 uid="uid://0xtia38tcgne"]

[ext_resource type="Script" uid="uid://dc50veadfdk6u" path="res://card_ui/card_slot.gd" id="1_jmuc5"]
[ext_resource type="PackedScene" uid="uid://dcm74fvn1poc" path="res://cards/card.tscn" id="1_qx3y6"]

[node name="CardSlot" type="Control" node_paths=PackedStringArray("card")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_jmuc5")
card = NodePath("Card")
maximum_screen_percentage = 1.1
minimum_screen_percentage = 0.69

[node name="Card" parent="." instance=ExtResource("1_qx3y6")]
layout_mode = 1
offset_left = 0.0
offset_right = 0.0

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="gui_input" from="Card" to="." method="_on_card_input"]
[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
